# nss_ldap

./: .gitignore  ANNOUNCE  AUTHORS  BUG  BUGS  CONTRIBUTORS  CVSVersionInfo.txt  ChangeLog  DevManBranch  IRS  Makefile  Makefile.RPM  Makefile.RPM.openldap2  Makefile.aix  Makefile.am  Makefile.bsd  Makefile.freebsd  Makefile.gnu  Makefile.in  Makefile.linux  Makefile.linux.irs  Makefile.linux.mozilla  Makefile.linux.openldap2  Makefile.next  Makefile.osf  Makefile.sgi  Makefile.solaris  Makefile.solaris.mozilla  NEWS  README  README.LINUX  TODO  acconfig.h  aclocal.m4  aix_authmeth.c  aliases.h  bsd-nss.c  certutil  config.guess  config.h.in  (+96 more)
doc/: README.AIX  README.IRS  README.SFU  README.krb5  SolarisInstallNotes.txt  autofs-4.1.3-lookup-nssldap.patch  lookup_nssldap.c
tests/: testpw6.c
